--- a/_posts/2022-11-03-2016东营市第二届模拟联合国大会影像资料.md
+++ b/_posts/2022-11-03-2016东营市第二届模拟联合国大会影像资料.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      2016东营市第二届模拟联合国大会
+title:      2016东营市第二届模拟联合国大会影像资料
 subtitle:   
 date:       2022-11-03
 author:     admin
