--- a/_posts/2022-11-02-2015东营市第一届模拟联合国大会影像资料.md
+++ b/_posts/2022-11-02-2015东营市第一届模拟联合国大会影像资料.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      2015东营市第一届模拟联合国大会
+title:      2015东营市第一届模拟联合国大会影像资料
 subtitle:   
 date:       2022-11-02
 author:     admin
